# cx

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
cx/: CMakeLists.txt
cx/src/: arg_parsing.c  file_handling.c  main.c  print_macro.h
cxlib/: CMakeLists.txt
cxlib/include/: cxapi.h
cxlib/src/: cxapi.c
examples/: main.c
src/: arg_parsing.c  arg_parsing.h  file_handling.c  file_handling.h  main.c
